RESOLVED FIXED 70519
[Chromium] Fixed Layout API needs to check that a FrameView has been created to avoid segfaults
https://bugs.webkit.org/show_bug.cgi?id=70519
Summary [Chromium] Fixed Layout API needs to check that a FrameView has been created ...
Fady Samuel
Reported 2011-10-20 09:54:35 PDT
Relatively straightforward problem and fix. Will post patch shortly.
Attachments
Patch (2.42 KB, patch)
2011-10-20 17:05 PDT, Fady Samuel
no flags
Fady Samuel
Comment 1 2011-10-20 17:05:25 PDT
Adam Barth
Comment 2 2011-10-20 17:07:45 PDT
Comment on attachment 111874 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=111874&action=review > Source/WebKit/chromium/ChangeLog:9 > + Simple patch. Upcoming patches for https://bugs.webkit.org/show_bug.cgi?id=70559 will make > + use of these methods in certain situations where the main frame doesn't yet have a FrameView. Ok. Please add tests for these branches as part of those bugs.
Fady Samuel
Comment 3 2011-10-20 17:09:11 PDT
(In reply to comment #2) > (From update of attachment 111874 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=111874&action=review > > > Source/WebKit/chromium/ChangeLog:9 > > + Simple patch. Upcoming patches for https://bugs.webkit.org/show_bug.cgi?id=70559 will make > > + use of these methods in certain situations where the main frame doesn't yet have a FrameView. > > Ok. Please add tests for these branches as part of those bugs. Will do, building a test suite is one of the blockers for the master bug. :-)
WebKit Review Bot
Comment 4 2011-10-20 19:36:09 PDT
Comment on attachment 111874 [details] Patch Clearing flags on attachment: 111874 Committed r98059: <http://trac.webkit.org/changeset/98059>
WebKit Review Bot
Comment 5 2011-10-20 19:36:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.