[Chromium] Fixed Layout API needs to check that a FrameView has been created to avoid segfaults https://bugs.webkit.org/show_bug.cgi?id=70519

Reviewed by Adam Barth.

Simple patch. Upcoming patches for https://bugs.webkit.org/show_bug.cgi?id=70559 will make
use of these methods in certain situations where the main frame doesn't yet have a FrameView.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::isFixedLayoutModeEnabled):
(WebKit::WebViewImpl::enableFixedLayoutMode):
(WebKit::WebViewImpl::fixedLayoutSize):
(WebKit::WebViewImpl::setFixedLayoutSize):


git-svn-id: svn://svn.chromium.org/blink/trunk@98059 bbb929c8-8fbe-4397-9dbb-9b2b20218538