third_party/WebKit/Source/WebKit/chromium/src/WebViewImpl.cpp
@@ -1920,7 +1920,7 @@ bool WebViewImpl::isFixedLayoutModeEnabled() const
         return false;
 
     Frame* frame = page()->mainFrame();
-    if (!frame)
+    if (!frame || !frame->view())
         return false;
 
     return frame->view()->useFixedLayout();
@@ -1932,7 +1932,7 @@ void WebViewImpl::enableFixedLayoutMode(bool enable)
         return;
 
     Frame* frame = page()->mainFrame();
-    if (!frame)
+    if (!frame || !frame->view())
         return;
 
     frame->view()->setUseFixedLayout(enable);
@@ -1944,7 +1944,7 @@ WebSize WebViewImpl::fixedLayoutSize() const
         return WebSize();
 
     Frame* frame = page()->mainFrame();
-    if (!frame)
+    if (!frame || !frame->view())
         return WebSize();
 
     return frame->view()->fixedLayoutSize();
@@ -1956,7 +1956,7 @@ void WebViewImpl::setFixedLayoutSize(const WebSize& layoutSize)
         return;
 
     Frame* frame = page()->mainFrame();
-    if (!frame)
+    if (!frame || !frame->view())
         return;
 
     frame->view()->setFixedLayoutSize(layoutSize);
